--- a/starter/style.css
+++ b/starter/style.css
@@ -20,7 +20,7 @@ body {
     font-family: Open Sans;
     font-size: 16px;
     position: relative;
-    height: 100vh;
+    /* height: 100vh; */
     font-weight: 400;
 }
 
@@ -43,7 +43,7 @@ body {
 
 .budget {
     position: absolute;
-    width: 350px;
+    width: 20%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -72,7 +72,8 @@ body {
 }
 
 .budget__income,
-.budget__expenses {
+.budget__expenses,
+.budget__maaser {
     padding: 12px;
     text-transform: uppercase;
 }
@@ -85,13 +86,21 @@ body {
 }
 
 .budget__expenses {
+    margin-bottom: 10px;
     background-color: #FF5049;
     border-radius: 8px;
     box-shadow:  0 6px 10px 0 #6981e2;
 }
 
+.budget__maaser {
+    background-color: #b9a915c0;
+    border-radius: 8px;
+    box-shadow:  0 6px 10px 0 #6981e2;
+}
+
 .budget__income--text,
-.budget__expenses--text {
+.budget__expenses--text,
+.budget__maaser--text {
     float: left;
     font-size: 13px;
     color: #444;
@@ -99,13 +108,15 @@ body {
 }
 
 .budget__income--value,
-.budget__expenses--value {
+.budget__expenses--value,
+.budget__maaser--value {
     letter-spacing: 1px;
     float: left;
 }
 
 .budget__income--percentage,
-.budget__expenses--percentage {
+.budget__expenses--percentage,
+.budget__maaser--percentage {
     float: left;
     width: 34px;
     font-size: 11px;
@@ -124,6 +135,12 @@ body {
     border-radius: 3px;
 }
 
+
+.budget__maaser--percentage {
+    background-color: rgba(255, 255, 255, 0.2);
+    text-align: center;
+    border-radius: 3px;
+}
 
 /**********************************************
 *** BOTTOM PART
@@ -179,11 +196,11 @@ body {
     transform: rotate(360deg);
     background-color: rgb(197, 192, 192);
     
-    box-shadow: 0 8px 8px 0 rgba(46, 21, 21, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 8px 8px 0 rgba(116, 56, 56, 0.2), 0 6px 20px 0 rgba(82, 67, 67, 0.19);
 }
 #sbmt:active{
-    box-shadow:0 4px 10px indigo;
-    background-color: rgba(158, 157, 157, 0.808);
+    box-shadow:0 4px 10px rgb(189, 144, 221);
+    background-color: rgba(143, 142, 142, 0.808);
 }
 
 .add__description { width: 400px;}
@@ -213,22 +230,22 @@ body {
 .add__btn:focus { outline: none; }
 
 /***** LISTS *****/
-.container {
+/* .container {
     width: 1000px;
     margin: 60px auto;
-}
+} */
 
 .income {
-    float: left;
-    width: 475px;
-    margin-right: 50px;
+    /* float: left; */
+    /* width: 475px; */
+    /* margin-right: 50px; */
     
     
 }
 
 .expenses {
-    float: left;
-    width: 475px;
+    /* float: left; */
+    /* width: 475px; */
 }
 
 h2 {
@@ -250,6 +267,11 @@ h2 {
     
 }
 
+.maaser__title {
+    color: #b9a915c0;
+    text-shadow: 1px 1px 4px #b9a915c0;
+}
+
 .item {
     padding: 13px;
     border-bottom: 1px solid #e7e7e7;
@@ -267,7 +289,8 @@ h2 {
     transition: transform 0.3s;
 }
 
-.item__percentage {
+.item__percentage,
+.maaserItem__percentage {
     float: left;
     margin-left: 20px;
     transition: transform 0.3s;
@@ -312,6 +335,7 @@ h2 {
 .item:hover .item__delete--btn { display: block; }
 .item:hover .item__value { transform: translateX(-20px); }
 .item:hover .item__percentage { transform: translateX(-20px); }
+.item:hover .maaserItem__percentage { transform: translateX(-20px); }
 
 
 .unpaid {
@@ -324,7 +348,7 @@ h2 {
 .unpaid .item__percentage { box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1); }
 .unpaid:hover .item__description { font-weight: 900; }
 
-#flex {
+.flex {
 display: flex;
 justify-content: space-evenly;
 flex-direction: row;
@@ -333,12 +357,13 @@ margin-top: 60px;
 overflow: auto;
 }
 @media (max-width: 600px){
-    #flex{
+    .flex{
         flex-flow: wrap;
     }
 }
 
-#flex >div {
+.flex >div {
+    width: 350px;
     text-align: center;
     font-size: 30px;
 }
